package eapli.base.ordersmanagement.customer.application;

public class RegisterCustomerController {
}
